Migrate to Spring Boot 4.0.2, Java 25 and Gradle 9.3.1
- Migrate to Spring Boot 4.0.2, update dependencies, and adopt Gradle version catalog for streamlined plugin and library management.
- Upgrade to Java 25, Gradle 9.3.1, Node.js 24.13.1, and npm 11.8.0.
- Optimize Docker image with BellSoft Liberica JDK on Alpaquita Linux for cloud-native performance.
- Refactor email handling logic with cascading deletions and new repositories.
- Fix React test warnings by wrapping user interactions in `act()`.
- Update JPA, Jackson, and test configurations for compatibility with latest frameworks.
- test: add comprehensive end-to-end integration tests for SMTP email processing
- test: add unit test for BASE64 encoding and decoding of inline images from EML files