@@ -2,17 +2,23 @@ package de.gessnerfl.fakesmtp.controller;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
 
 import de.gessnerfl.fakesmtp.model.Email;
 import de.gessnerfl.fakesmtp.model.RestResponsePage;
 import de.gessnerfl.fakesmtp.model.query.*;
+import de.gessnerfl.fakesmtp.repository.EmailAttachmentRepository;
+import de.gessnerfl.fakesmtp.repository.EmailContentRepository;
+import de.gessnerfl.fakesmtp.repository.EmailInlineImageRepository;
 import de.gessnerfl.fakesmtp.repository.EmailRepository;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -40,20 +46,35 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @ActiveProfiles("mockserver")
 @ExtendWith(SpringExtension.class)
-@SpringBootTest
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.MOCK)
 @AutoConfigureMockMvc
 class EmailRestControllerMVCIntegrationTest {
 
     @Autowired
     private EmailRepository emailRepository;
+
     @Autowired
-    private ObjectMapper objectMapper;
+    private EmailAttachmentRepository emailAttachmentRepository;
+
+    @Autowired
+    private EmailContentRepository emailContentRepository;
+
+    @Autowired
+    private EmailInlineImageRepository emailInlineImageRepository;
+
+    private final ObjectMapper objectMapper = new ObjectMapper()
+            .registerModule(new JavaTimeModule())
+            .registerModule(new Jdk8Module())
+            .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
 
     @Autowired
     private MockMvc mockMvc;
 
     @BeforeEach
     void init() {
+        emailAttachmentRepository.deleteAll();
+        emailContentRepository.deleteAll();
+        emailInlineImageRepository.deleteAll();
         emailRepository.deleteAll();
     }
 
@@ -140,7 +161,7 @@ class EmailRestControllerMVCIntegrationTest {
     @Test
     void shouldReturnAttachmentForEmail() throws Exception {
         var email = createRandomEmail(1);
-        var attachment = email.getAttachments().get(0);
+        var attachment = email.getAttachments().getFirst();
 
         this.mockMvc.perform(get("/api/emails/" + email.getId() + "/attachments/" + attachment.getId()))
                 .andExpect(header().string(HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + attachment.getFilename()))
@@ -162,7 +183,7 @@ class EmailRestControllerMVCIntegrationTest {
     void shouldReturnErrorWhenAttachmentIsRequestedButMailIdIsNotValid() throws Exception {
         var email = createRandomEmail(1);
 
-        this.mockMvc.perform(get("/api/emails/123/attachments/" + email.getAttachments().get(0).getId()))
+        this.mockMvc.perform(get("/api/emails/123/attachments/" + email.getAttachments().getFirst().getId()))
                 .andExpect(status().isNotFound());
     }
 
@@ -547,6 +568,44 @@ class EmailRestControllerMVCIntegrationTest {
         assertEquals(0, emailSearchResult.getNumberOfElements());
     }
 
+    @Test
+    void shouldDeleteAllEmailsWithAttachmentsContentAndInlineImages() throws Exception {
+        save(EmailControllerUtil.prepareEmailWithAllChildren(1));
+        save(EmailControllerUtil.prepareEmailWithAllChildren(2));
+        save(EmailControllerUtil.prepareEmailWithAllChildren(3));
+
+        assertThat(emailRepository.findAll(), hasSize(3));
+        assertThat(emailAttachmentRepository.findAll(), hasSize(3));
+        assertThat(emailContentRepository.findAll(), hasSize(3));
+        assertThat(emailInlineImageRepository.findAll(), hasSize(3));
+
+        this.mockMvc.perform(delete("/api/emails"))
+                .andExpect(status().is2xxSuccessful());
+
+        assertThat(emailRepository.findAll(), empty());
+        assertThat(emailAttachmentRepository.findAll(), empty());
+        assertThat(emailContentRepository.findAll(), empty());
+        assertThat(emailInlineImageRepository.findAll(), empty());
+    }
+
+    @Test
+    void shouldDeleteSingleEmailWithCascade() throws Exception {
+        var email = save(EmailControllerUtil.prepareEmailWithAllChildren(1));
+        var emailId = email.getId();
+
+        assertThat(emailRepository.findAll(), hasSize(1));
+        assertThat(emailAttachmentRepository.findAll(), hasSize(1));
+        assertThat(emailContentRepository.findAll(), hasSize(1));
+        assertThat(emailInlineImageRepository.findAll(), hasSize(1));
+
+        this.mockMvc.perform(delete("/api/emails/" + emailId))
+                .andExpect(status().is2xxSuccessful());
+
+        assertThat(emailRepository.findAll(), empty());
+        assertThat(emailAttachmentRepository.findAll(), empty());
+        assertThat(emailContentRepository.findAll(), empty());
+        assertThat(emailInlineImageRepository.findAll(), empty());
+    }
 
     private Email mapFromJson(String json) throws IOException {
         return objectMapper.readValue(json, Email.class);
@@ -557,7 +616,7 @@ class EmailRestControllerMVCIntegrationTest {
     }
 
     private List<Email> createRandomEmails(int numberOfEmails, int minusMinutes) {
-        return IntStream.range(0, numberOfEmails).mapToObj(i -> createRandomEmail(minusMinutes)).collect(Collectors.toList());
+        return IntStream.range(0, numberOfEmails).mapToObj(_ -> createRandomEmail(minusMinutes)).collect(Collectors.toList());
     }
 
     private Email createRandomEmail(int minusMinutes) {
